--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
     ],
     "require": {
         "phpseclib/phpseclib": "*",
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "guzzlehttp/guzzle": "~6"
     },
     "require-dev": {
         "guzzle/guzzle": ">=3.8",
         "symfony/http-foundation": ">=2.4",
         "phpunit/phpunit": "*",
         "mockery/mockery": "*",
-        "guzzlehttp/guzzle": ">=4.1",
         "react/http": "~0.4"
     },
     "suggest": {
